##                                               -*- Autoconf -*-
## Process this file with autoconf to produce a configure script.
## ************************************************************************/
##        version number:    $LastChangedRevision$
##        created by:        Anar Manafov
##                           2007-03-25
##        last changed by:   $LastChangedBy$ $LastChangedDate$
##
##        Copyright (c) 2007 GSI GridTeam. All rights reserved.
## *************************************************************************/
AC_PREREQ(2.59)
AC_INIT

# Geting HEADS's revision number
SVN_HEAD_REV=`svn info https://subversion.gsi.de/grid/D-Grid/PROOFAgent/trunk/PROOFAgent/ | grep "Revision: " | head -1 | awk -F: '{print $2}'`

# HACK: echo ${SVN_HEAD_REV}  is used to remove leading space
TMP_VER=`echo ${SVN_HEAD_REV}`

VER=["1.0.1."$TMP_VER]


AM_INIT_AUTOMAKE([proofagent], $VER)

AC_CONFIG_SRCDIR([configure.in])
AC_CONFIG_HEADERS([config.h])


## ----------------------------------------------------------------------
## --------------------------- >>> DEBUG/RELEASE Build <<< -----
## ----------------------------------------------------------------------
## Check whether to build debug or not
AC_MSG_CHECKING([whether to make a debug build])
ENABLE_DEBUG=0
AC_ARG_ENABLE(debug,
    [  --enable-debug          build debug libraries [default=no]],
    [ case "${enableval}" in
         yes|"") ENABLE_DEBUG=1 ;;
         *) ;;
    esac],
)
AC_MSG_RESULT($ENABLE_DEBUG)
AC_SUBST(ENABLE_DEBUG)
if test "$ENABLE_DEBUG" = "1" ; then
	CXXFLAGS="$CXXFLAGS -g3 -O0"
else
	CXXFLAGS="$CXXFLAGS -g0 -O2"
fi



AC_LANG([C++])
AC_PROG_CXX

AC_PROG_INSTALL


## -----------------------------------------------------------------------
## ----------------------------- >>> XERCESC <<<----------------------------
## -----------------------------------------------------------------------
AC_MSG_CHECKING([for xercesc location])
AC_ARG_WITH(xercesc-location,
    [ --with-xercesc-location=<dir> Default is \$XERCESC_LOCATION],
    xercesc_location="$withval",
    xercesc_location="$XERCESC_LOCATION")
if test -d "$xercesc_location" ; then
    AC_MSG_RESULT([found $xercesc_location])
    XERCESC_LOCATION=$xercesc_location
elif test -d /opt/glite/externals ; then
     AC_MSG_RESULT([found /opt/glite/externals])
     XERCESC_LOCATION=/opt/glite/externals
else
    AC_MSG_ERROR([no such directory $glite_location])
fi

LDFLAGS="$LDFLAGS -L$XERCESC_LOCATION/lib -lxerces-c"
CPPFLAGS="$CPPFLAGS -I$XERCESC_LOCATION/include"

## -----------------------------------------------------------------------
## ----------------------------- >>> BOOST <<<----------------------------
## -----------------------------------------------------------------------
AC_MSG_CHECKING([for BOOST location])
AC_ARG_WITH(boost-location,
    [ --with-boost-location=<dir> Default is \$BOOST_LOCATION],
    boost_location="$withval",
    boost_location="$BOOST_LOCATION")
if test -d "$boost_location" ; then
    AC_MSG_RESULT([found $boost_location])
    BOOST_LOCATION=$boost_location
else
    AC_MSG_ERROR([no such directory $boost_location])
fi

LDFLAGS="$LDFLAGS -L$BOOST_LOCATION/lib -lboost_thread -lboost_program_options"
CPPFLAGS="$CPPFLAGS -I$BOOST_LOCATION/include"

AC_CONFIG_FILES([Doxyfile
Makefile
src/Makefile
src/unit_test/Makefile])
AC_OUTPUT
